changed postion of footer

--- a/styles/output.css
+++ b/styles/output.css
@@ -204,6 +204,9 @@
   .-bottom-72 {
     bottom: calc(var(--spacing) * -72);
   }
+  .-bottom-96 {
+    bottom: calc(var(--spacing) * -96);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
